Spreadsheet does not display volume grid information for import vdb file #95720

Closed
opened 2022-02-12 03:49:20 +01:00 by Aaron Carlisle · 8 comments
Member

System Information
Operating system: Linux-5.13.0-28-generic-x86_64-with-glibc2.34 64 Bits
Graphics card: Mesa Intel(R) UHD Graphics 620 (KBL GT2) Intel 4.6 (Core Profile) Mesa 21.2.2

Blender Version
Broken: version: 3.2.0 Alpha, hash: cf6546863e
Worked: Unknown

Short description of error
When importing an external OpenVDB file the spreadsheet does not display volume grid information for the imported vdb file

Exact steps for others to reproduce the error
Add a new volume by importing an existing OpenVDB file. I have attached an OpenVDB file to test with, the file has 3 grids which can be seen in the object properties.

embergen_gasoline_explosion_a_121.vdb

**System Information** Operating system: Linux-5.13.0-28-generic-x86_64-with-glibc2.34 64 Bits Graphics card: Mesa Intel(R) UHD Graphics 620 (KBL GT2) Intel 4.6 (Core Profile) Mesa 21.2.2 **Blender Version** Broken: version: 3.2.0 Alpha, hash: `cf6546863e` Worked: Unknown **Short description of error** When importing an external OpenVDB file the spreadsheet does not display volume grid information for the imported vdb file **Exact steps for others to reproduce the error** Add a new volume by importing an existing OpenVDB file. I have attached an OpenVDB file to test with, the file has 3 grids which can be seen in the object properties. [embergen_gasoline_explosion_a_121.vdb](https://archive.blender.org/developer/F12863306/embergen_gasoline_explosion_a_121.vdb)
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm. It's actually a regression. Searching for the culprit commit

I can confirm. It's actually a regression. Searching for the culprit commit
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

@HooglyBoogly can you check? I suspect it occurred after your commit: 474adc6f88

Not bisected this time but that's the only relevant change I found between worked and broken build.
(Broke between 644eb68524 - b7e151d876)

@HooglyBoogly can you check? I suspect it occurred after your commit: 474adc6f88 Not bisected this time but that's the only relevant change I found between worked and broken build. (Broke between 644eb68524b9 - b7e151d876e7)
Hans Goudey self-assigned this 2022-02-12 17:17:57 +01:00

This issue was referenced by 1f7f7ca14e

This issue was referenced by 1f7f7ca14e50be457810efb109a03d98f78726fc
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:46 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95720
No description provided.