Fix T95720: Spreadsheet missing volume grid info

The cell drawing code in 474adc6f883c2d5a854d7 was missing an
implementation for virtual arrays of strings.